--- a/pom.xml
+++ b/pom.xml
@@ -169,6 +169,11 @@
         </dependency>
 
 
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.8.1</version>
+        </dependency>
 
         <dependency>
             <groupId>org.slf4j</groupId>
