--- a/pom.xml
+++ b/pom.xml
@@ -155,6 +155,14 @@
             <artifactId>flink-connector-kafka-0.9_2.11</artifactId>
             <version>${flink.version}</version>
         </dependency>
+
+        <!-- flink cep -->
+        <dependency>
+            <groupId>org.apache.flink</groupId>
+            <artifactId>flink-cep-scala_2.11</artifactId>
+            <version>${flink.version}</version>
+        </dependency>
+
         <!-- json -->
         <dependency>
             <groupId>com.alibaba</groupId>
